--- a/clinique_app/templates/_detailstaff.html
+++ b/clinique_app/templates/_detailstaff.html
@@ -12,7 +12,7 @@
                             <a href="/">Главная</a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="/stuff">Команда</a>
+                            <a href="/staff">Команда</a>
                         </li>
                         <li class="breadcrumb-item active" aria-current="page">{{ staff.full_name }}</li>
                     </ol>
@@ -22,8 +22,10 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 headers-wrapper"><span class="section-subHeader">Наши специалисты </span><span
-                    class="section-header">команда</span></div>
+            <div class="col-lg-12 headers-wrapper">
+                <span class="section-subHeader">Наши специалисты </span>
+                <span class="section-header">команда</span>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
