--- a/clinique_app/templates/_staff.html
+++ b/clinique_app/templates/_staff.html
@@ -54,13 +54,21 @@
                     <span>про каждую услугу</span>
                 </div>
                 <div class="col-lg-12 inputs-wrapper">
-                    <form method="post" action="">
-                    {% csrf_token %}
-                    {{ form_price.name }}
-                    {{ form_price.phone }}
-                    {{ form_price.email }}
-                        <button class="cta-button" type="submit" value="Submit" name="price_form">Записаться</button>
-                    </form>
+                <form method="post" action="">
+                        <div class="row">
+                            {% csrf_token %}
+                            <div class="col-lg-4">{{ form_price.name }}</div>
+                            <div class="col-lg-4">{{ form_price.phone }}</div>
+                            <div class="col-lg-4">{{ form_price.email }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4"></div>
+                            <div class="col-lg-4">
+                                <button class="cta-button" type="submit" value="Submit" name="price_form">Записаться</button>
+                            </div>
+                            <div class="col-lg-4"></div>
+                        </div>
+                </form>
                     <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
                         конфиденциальности</a></p>
                 </div>
