--- a/clinique_app/templates/base/footer.html
+++ b/clinique_app/templates/base/footer.html
@@ -102,7 +102,7 @@
 
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
      aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -127,7 +127,7 @@
                                     Записаться
                                 </button>
                             </form>
-                            <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
+                            <p>Я соглашаюсь на обработку персональных данных и с <a href="/privacy" style="color: #4f9c50;">политикой
                                 конфиденциальности</a></p>
                         </div>
                     </div>
