--- a/clinique_app/templates/_staff.html
+++ b/clinique_app/templates/_staff.html
@@ -34,7 +34,7 @@
                             <p>{{ staff.state }}</p>
                         </div>
                         <div class="single-worker__content">
-                            <button class="cta-button">Записаться</button>
+                            <button class="cta-button" data-toggle="modal" data-target="#exampleModalCenter">Записаться</button>
                             <a href="{{ staff.get_absolute_url }}">
                                 <button class="custom-outline">Подробнее</button>
                             </a>
