--- a/clinique_app/templates/base/footer.html
+++ b/clinique_app/templates/base/footer.html
@@ -91,8 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p style="text-align: right; font-size: 10px;"><a href="https://www.divier.ru/"
-                                                                      style="color: #4f9c50; text-decoration: underline">Создание
+                    <p style="text-align: right; font-size: 10px;"><a href="https://www.divier.ru/" style="color: #4f9c50; text-decoration: underline" target="_blank">Создание
                         сайта </a>ДиВиЕр</p>
                 </div>
             </div>
@@ -127,7 +126,7 @@
                                     Записаться
                                 </button>
                             </form>
-                            <p>Я соглашаюсь на обработку персональных данных и с <a href="/privacy" style="color: #4f9c50;">политикой
+                            <p>Я соглашаюсь на обработку персональных данных и с <a href="/privacy" style="color: #4f9c50;" >политикой
                                 конфиденциальности</a></p>
                         </div>
                     </div>
