--- a/clinique_app/templates/_qa.html
+++ b/clinique_app/templates/_qa.html
@@ -24,125 +24,25 @@
             <div class="row">
                 <div class="col-12 accordions-wrapper">
                     <div id="accordion">
+                        {% for qa in qas %}
                         <div class="card">
-                            <div class="card-header" id="headingOne">
+                            <div class="card-header" id="heading{{qa.id}}">
                                 <h5 class="mb-0" data-after="\002B">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
-                                            aria-expanded="true" aria-controls="collapseOne"><span class="colored-span">01</span>
-                                        С какого возраста можнo идти к косметологу? <i class="fa fa-plus"></i></button>
-                                </h5>
-                            </div>
-                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
-                                 data-parent="#accordion">
-                                <div class="card-body">В клинику эстетической медицины можно начинать ходить с 18 лет.
-                                    Эстетическая медицина — это не только инъекции, но и решение дерматологических
-                                    проблем (акне, угревая сыпь). Поэтому конкретного возраста нет, все зависит от того,
-                                    что вы хотите изменить. Также поход в клинику – это не всегда борьба со старением,
-                                    улучшать себя можно в любом возрасте. Перед каждой процедурой вас проконсультирует
-                                    врач и подберет наиболее подходящие для вас и вашего возраста процедуры.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="headingTwo">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo"
-                                            aria-expanded="true" aria-controls="collapseOne"><span class="colored-span">02</span>
-                                        Больно ли делать инъекции и другие процедуры? <i class="fa fa-plus"></i>
+                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{qa.id}}"
+                                            aria-expanded="true" aria-controls="collapse{{qa.id}}">
+                                        <span class="colored-span">{{qa.num}}</span>
+                                        {{qa.question}} <i class="fa fa-plus"></i>
                                     </button>
                                 </h5>
                             </div>
-                            <div id="collapseTwo" class="collapse" aria-labelledby="headingOne"
+                            <div id="collapse{{qa.id}}" class="collapse" aria-labelledby="heading{{qa.id}}"
                                  data-parent="#accordion">
-                                <div class="card-body">В клинику эстетической медицины можно начинать ходить с 18 лет.
-                                    Эстетическая медицина — это не только инъекции, но и решение дерматологических
-                                    проблем (акне, угревая сыпь). Поэтому конкретного возраста нет, все зависит от того,
-                                    что вы хотите изменить. Также поход в клинику – это не всегда борьба со старением,
-                                    улучшать себя можно в любом возрасте. Перед каждой процедурой вас проконсультирует
-                                    врач и подберет наиболее подходящие для вас и вашего возраста процедуры.
+                                <div class="card-body">
+                                    {{qa.answer}}
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
-                            <div class="card-header" id="headingThree">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree"
-                                            aria-expanded="true" aria-controls="collapseOne"><span class="colored-span">03</span>
-                                        Больно ли делать инъекции и другие процедуры? <i class="fa fa-plus"></i>
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapseThree" class="collapse" aria-labelledby="headingOne"
-                                 data-parent="#accordion">
-                                <div class="card-body">В клинику эстетической медицины можно начинать ходить с 18 лет.
-                                    Эстетическая медицина — это не только инъекции, но и решение дерматологических
-                                    проблем (акне, угревая сыпь). Поэтому конкретного возраста нет, все зависит от того,
-                                    что вы хотите изменить. Также поход в клинику – это не всегда борьба со старением,
-                                    улучшать себя можно в любом возрасте. Перед каждой процедурой вас проконсультирует
-                                    врач и подберет наиболее подходящие для вас и вашего возраста процедуры.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="headingFour">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour"
-                                            aria-expanded="true" aria-controls="collapseOne"><span class="colored-span">04</span>
-                                        Больно ли делать инъекции и другие процедуры? <i class="fa fa-plus"></i>
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapseFour" class="collapse" aria-labelledby="headingOne"
-                                 data-parent="#accordion">
-                                <div class="card-body">В клинику эстетической медицины можно начинать ходить с 18 лет.
-                                    Эстетическая медицина — это не только инъекции, но и решение дерматологических
-                                    проблем (акне, угревая сыпь). Поэтому конкретного возраста нет, все зависит от того,
-                                    что вы хотите изменить. Также поход в клинику – это не всегда борьба со старением,
-                                    улучшать себя можно в любом возрасте. Перед каждой процедурой вас проконсультирует
-                                    врач и подберет наиболее подходящие для вас и вашего возраста процедуры.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="headingFive">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive"
-                                            aria-expanded="true" aria-controls="collapseOne"><span class="colored-span">05</span>
-                                        Больно ли делать инъекции и другие процедуры? <i class="fa fa-plus"></i>
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapseFive" class="collapse" aria-labelledby="headingOne"
-                                 data-parent="#accordion">
-                                <div class="card-body">В клинику эстетической медицины можно начинать ходить с 18 лет.
-                                    Эстетическая медицина — это не только инъекции, но и решение дерматологических
-                                    проблем (акне, угревая сыпь). Поэтому конкретного возраста нет, все зависит от того,
-                                    что вы хотите изменить. Также поход в клинику – это не всегда борьба со старением,
-                                    улучшать себя можно в любом возрасте. Перед каждой процедурой вас проконсультирует
-                                    врач и подберет наиболее подходящие для вас и вашего возраста процедуры.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="headingSix">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix"
-                                            aria-expanded="true" aria-controls="collapseOne"><span class="colored-span">06</span>
-                                        Больно ли делать инъекции и другие процедуры? <i class="fa fa-plus"></i>
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapseSix" class="collapse" aria-labelledby="headingOne"
-                                 data-parent="#accordion">
-                                <div class="card-body">В клинику эстетической медицины можно начинать ходить с 18 лет.
-                                    Эстетическая медицина — это не только инъекции, но и решение дерматологических
-                                    проблем (акне, угревая сыпь). Поэтому конкретного возраста нет, все зависит от того,
-                                    что вы хотите изменить. Также поход в клинику – это не всегда борьба со старением,
-                                    улучшать себя можно в любом возрасте. Перед каждой процедурой вас проконсультирует
-                                    врач и подберет наиболее подходящие для вас и вашего возраста процедуры.
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
